
Version 4.02  2012-10-27
 * validate file_ext_name and prefix_name when upload file
 * storage.conf add parameter: file_sync_skip_invalid_record
 * add offset debug info when sync file fail
 * tracker and storage error log support rotate
 * bug fixed: log to binlog also if the file exists when sync file
 * rotate log when receive HUP signal

Version 4.01  2012-10-21
 * trunk_mgr/trunk_mem.c: trunk init flag check more strictly
 * file signature for checking file duplicate support MD5
 * slave file support both symbol link and direct file
 * tracker server log trunk server change logs

Version 4.00  2012-10-06
 * identify storage server by ID instead of IP address
 * tracker.conf: storage reserved space can use ratio such as 10%
 * storage server support access log
 * appender file and trunk file also use rand number in file id
 * bug fixed: test_upload.c: char file_id[64] change to: char file_id[128]
 * set pipe reading fd with attribute O_NOATIME
 * bug fixed: correct php extension call_user_function TSRMLS_DC with TSRMLS_CC

Version 3.11  2012-08-04
 * setsockopt set linger.l_linger to micro-seconds in FreeBSD and seconds 
   in others
 * trunk binlog reader skip incorrect records
 * bug fixed: single disk recovery support symbol link and trunk file
 * storage generate filename enhancement
 * ETIME change to ETIMEDOUT for FreeBSD
 * tracker_mem.c: load storage server ignore empty ip address

Version 3.10  2012-07-22
 * check and init trunk file more gracefully
 * remove unused-but-set-variable
 * bug fixed: return correct group name when g_check_file_duplicate is true
 * bug fixed: php extension call_user_function replace TSRMLS_CC with TSRMLS_DC
 * large the interval of tracker re-select trunk server
 * trunk free block check duplicate using avl tree
 * trunk file sync overwrite the dest file anyway
 * common/avl_tree.c: free data when delete
 * tracker.conf add parameter: trunk_init_reload_from_binlog, when this flag 