@@ -46,6 +46,7 @@
 #define TRACKER_PROTO_CMD_SERVER_LIST_ALL_GROUPS		91
 #define TRACKER_PROTO_CMD_SERVER_LIST_STORAGE			92
 #define TRACKER_PROTO_CMD_SERVER_DELETE_STORAGE			93
+#define TRACKER_PROTO_CMD_SERVER_SET_TRUNK_SERVER		94
 #define TRACKER_PROTO_CMD_SERVICE_QUERY_STORE_WITHOUT_GROUP_ONE	101
 #define TRACKER_PROTO_CMD_SERVICE_QUERY_FETCH_ONE		102
 #define TRACKER_PROTO_CMD_SERVICE_QUERY_UPDATE  		103
